--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "@google-cloud/local-auth": "^2.1.0",
     "chromium": "^3.0.3",
     "fs": "^0.0.1-security",
     "googleapis": "^105.0.0",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "qrcode-terminal": "^0.12.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-scripts": "5.0.1",
     "selenium": "^2.20.0",
+    "web-vitals": "^2.1.4",
     "whatsapp-web.js": "^1.22.1",
     "xlsx": "^0.18.5"
   },
@@ -45,5 +45,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@prisma/client": "5.22.0",
+    "@types/express": "^4.17.25",
+    "@types/node": "^25.3.0",
+    "prisma": "5.22.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
